# research

./: .gitignore  =0.40.0  CLAUDE.md  HUGGINGFACE_GUIDE.md  README.md  lambda_bash.sh  pyproject.toml
assets/: CLAUDE.md
assets/datasets/: README.md
assets/models/: README.md
assets/outputs/: README.md
common/cli/: __init__.py  data.py  experiments.py  infra.py
common/cli/tui/: app.py  (+7 more)
common/data/: CLAUDE.md  __init__.py  dataset_registry.py  download_dataset.py  extract_corpus.py  hf_utils.py  pretokenize_dataset.py  query_domain_index.py  token_analyzer.py  train_tokenizer.py
common/models/: __init__.py  base.py
common/simple_tui/: __init__.py  __main__.py  app.py  commands.py  completers.py  discovery.py
common/training/: __init__.py  advanced_evaluator.py  checkpoint_manager.py  evaluator.py
common/utils/: __init__.py  experiment_storage.py  migrate_to_tensorboard.py  tensorboard_writer.py  training_logger.py  wandb_logger.py
projects/: README.md  __init__.py
projects/continual_learning/: CLAUDE.md  README.md  build_domain_index.py  config_summary.py  plan.md  train.py  validate.py
projects/custom_transformer/: CLAUDE.md  PLAN.md  config_summary.py  evaluate.py  forward_test.py  model  overfit.py  train.py  validate.py
projects/embedded_attention/: CLAUDE.md  __init__.py  evaluate.py  validate.py
projects/encoder_decoder_transformer/: README.md  data
projects/least_action_learning/: CLAUDE.md  README.md  plan.md  pyproject.toml
projects/least_action_learning/configs/: baseline.yaml  multi_op.yaml  new_year_validation_sweep.yaml  routed.yaml  routed_no_reg.yaml  routed_validation.yaml  sweep.yaml  transformer.yaml  transformer_sweep.yaml  validate.yaml  validate_transformer.yaml
projects/least_action_learning/docs/: routed_transformer_findings.md
projects/least_action_learning/scripts/: run_sweep.py  train.py
projects/least_action_learning/src/: __init__.py  data.py  losses.py  metrics.py  models.py  routing.py  trainer.py  visualize.py
projects/least_action_learning/src/analysis/: __init__.py  architecture.py  comparison.py  frequency.py  loader.py  metrics.py  phases.py  store.py
projects/least_action_learning/src/metrics/: __init__.py  curvature.py  model_properties.py  optimizer.py  routing.py  training.py
projects/least_action_learning/tests/: __init__.py  conftest.py  test_data.py  test_e2e.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_routing.py  test_trainer.py  test_visualizer.py
projects/least_action_learning/visualizer/: __init__.py  __main__.py  app.py  data.py  helpers.py  plots.py  styles.py
projects/research_agent/: CLAUDE.md  IMPLEMENTATION_PLAN.md  Refined_Workflow.md  Workflow.md
projects/research_manager_agent/: CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
projects/research_manager_agent/.claude/skills/codebase-navigation/: CONVENTIONS.md
projects/research_manager_agent/.claude/skills/training-assistant/: ERROR_PATTERNS.md  SKILL.md
projects/research_manager_agent/src/research_manager/: __init__.py  agent.py  indexer.py  main.py
projects/research_manager_agent/src/research_manager/memory/: __init__.py  base.py  knowledge_graph.py  persistent.py  session.py
projects/research_manager_agent/src/research_manager/safety/: __init__.py  audit.py  hooks.py
projects/research_manager_agent/src/research_manager/tools/: __init__.py  assistant.py  configs.py  decorators.py  experiments.py  explore.py  loader.py  projects.py  scripts.py
projects/research_manager_agent/src/research_manager/ui/: __init__.py  terminal.py
projects/research_manager_agent/tests/: conftest.py
projects/research_manager_agent/tests/benchmarks/: test_performance.py
projects/research_manager_agent/tests/e2e/: test_scenarios.py
projects/research_manager_agent/tests/eval/: __init__.py
projects/research_manager_agent/tests/integration/: __init__.py  test_tool_combinations.py
projects/research_manager_agent/tests/unit/: test_assistant.py  test_configs.py  test_experiments.py  test_explore.py  test_indexer.py  test_memory.py  test_projects.py  test_safety.py  test_schemas.py  test_scripts.py  test_tools.py
projects/research_repository_agent/: CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
setups/: lambda_bash.sh
tests/: __init__.py  test_transformer_training.py  test_tui.py
tools/: analyze_tokens.py  download_fineweb_sample.py  download_hf_dataset.py  download_hf_model.py  lambda_availability.py  pretokenize_dataset.py  query_experiments.py  test_env.py
(+157 files in other folders)
