[project]
name = "ml-research"
version = "0.1.0"
description = "ML research monorepo for paper implementations and original research"
requires-python = ">=3.10"
dependencies = [
    # Core ML frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",

    # Numerical & data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",

    # ML libraries
    "scikit-learn>=1.3.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",

    # Experiment tracking & visualization
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",

    # Experiment storage
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    # Jupyter & notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",

    # Code quality
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",

    # Pre-commit hooks
    "pre-commit>=3.3.0",
]

cv = [
    # Computer vision extras
    "opencv-python>=4.8.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "pillow>=10.0.0",
]

nlp = [
    # NLP extras
    "tokenizers>=0.13.0",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.0.53",
]

embedded_attention = [
    # Embedded attention project dependencies
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
]

all = [
    "ml-research[dev,cv,nlp,embedded_attention]",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "projects*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=common --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
